unpackaged/main/default/objects/clazar__Contract__c/clazar__Contract__c.object-meta.xml
<CustomObject>
    <label>Clazar Contract</label>
    <nameField>
        <label>Cloud Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clazar Contracts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>