unpackaged/main/default/objects/clazar__Contract__c/fields/clazar__auto_renewal__c.field-meta.xml
<CustomField>
    <fullName>clazar__auto_renewal__c</fullName>
    <label>Auto Renewal</label>
    <length>50</length>
    <type>Text</type>
</CustomField>