unpackaged/main/default/objects/clazar__Contract__c/fields/clazar__buyer_id__c.field-meta.xml
<CustomField>
    <fullName>clazar__buyer_id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Buyer</label>
    <referenceTo>clazar__Buyer__c</referenceTo>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>