unpackaged/main/default/objects/clazar__Contract__c/fields/clazar__custom_metadata__c.field-meta.xml
<CustomField>
    <fullName>clazar__custom_metadata__c</fullName>
    <label>Custom Metadata</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>