unpackaged/main/default/objects/clazar__Contract__c/fields/clazar__end_at__c.field-meta.xml
<CustomField>
    <fullName>clazar__end_at__c</fullName>
    <label>End At</label>
    <type>DateTime</type>
</CustomField>