unpackaged/main/default/objects/clazar__Contract__c/fields/clazar__listing_id__c.field-meta.xml
<CustomField>
    <fullName>clazar__listing_id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Listing</label>
    <referenceTo>clazar__Listing__c</referenceTo>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>