unpackaged/main/default/objects/clazar__Contract__c/fields/clazar__offer_type__c.field-meta.xml
<CustomField>
    <fullName>clazar__offer_type__c</fullName>
    <label>Offer Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>