unpackaged/main/default/objects/clazar__Contract__c/fields/clazar__start_at__c.field-meta.xml
<CustomField>
    <fullName>clazar__start_at__c</fullName>
    <label>Start At</label>
    <type>DateTime</type>
</CustomField>