unpackaged/main/default/objects/clazar__Contract__c/fields/clazar__total_contract_value__c.field-meta.xml
<CustomField>
    <fullName>clazar__total_contract_value__c</fullName>
    <label>Total Contract Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>