unpackaged/main/default/objects/clazar__Contract__c/fields/clazar__uuid__c.field-meta.xml
<CustomField>
    <fullName>clazar__uuid__c</fullName>
    <externalId>true</externalId>
    <label>Clazar Id</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>