unpackaged/main/default/objects/clazar__Contract__c/fields/Includes_Registration__c.field-meta.xml
<CustomField>
    <fullName>Includes_Registration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Includes Registration?</label>
    <type>Checkbox</type>
</CustomField>