unpackaged/main/default/objects/clazar__Contract__c/listViews/clazar__All.listView-meta.xml
<ListView>
    <fullName>clazar__All</fullName>
    <columns>NAME</columns>
    <columns>clazar__cloud__c</columns>
    <columns>clazar__start_at__c</columns>
    <columns>clazar__end_at__c</columns>
    <columns>clazar__status__c</columns>
    <columns>clazar__buyer_id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>