unpackaged/main/default/objects/clazar__Contract__c/listViews/clazar__Azure_Contracts.listView-meta.xml
<ListView>
    <fullName>clazar__Azure_Contracts</fullName>
    <columns>NAME</columns>
    <columns>clazar__cloud__c</columns>
    <columns>clazar__start_at__c</columns>
    <columns>clazar__end_at__c</columns>
    <columns>clazar__status__c</columns>
    <columns>clazar__buyer_id__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>clazar__cloud__c</field>
        <operation>equals</operation>
        <value>azure</value>
    </filters>
    <label>Azure Contracts</label>
</ListView>